--- a/App/Views/HoSo/chi_tiet.html
+++ b/App/Views/HoSo/chi_tiet.html
@@ -38,10 +38,10 @@ Chi tiết hồ sơ
                             </ul>
                             <div class="row">
                                 <div class="container">
-                                    <div class="col-md-6"><a class="btn btn-danger" style="width: 100%" href="/Admin/HoSoNgoaiToc/{{hoSo.MaHoSo}}/themVoChong">
-                                        <i class="fa fa-edit m-right-xs"></i> Thêm vợ/ chồng</a>
+                                    <div class="col-md-6"><a class="btn btn-danger" style="width: 100%" href="/admin/ho-so-ngoai-toc/{{hoSo.MaHoSo}}/them-vo-chong">
+                                        <i class="fa fa-edit m-right-xs"></i> Thêm vợ </a>
                                         <br/></div>
-                                    <div class="col-md-6"><a class="btn btn-success" style="width: 100%" href="/ho-so/{{hoSo.MaHoSo}}/them-con">
+                                    <div class="col-md-6"><a class="btn btn-success" style="width: 100%" href="/admin/ho-so/{{hoSo.MaHoSo}}/them-con">
                                         <i class="fa fa-child m-right-xs"></i> Thêm con</a>
                                         <br/></div>
                                 </div>
@@ -207,8 +207,8 @@ Chi tiết hồ sơ
                                 {% endif %}
                                 {% endfor %}
                             </ol>
-                            <a class="btn btn-success btn-sm" href="/ho-so-ngoai-toc/{{vo.mahosont}}">
-                                <i class="fa fa-edit m-right-xs"></i>Chỉnh sửa</a>
+                            <a class="btn btn-success btn-sm" href="/admin/ho-so-ngoai-toc/{{vo.mahosont}}">
+                                <i class="fa fa-edit m-right-xs"></i> Chỉnh sửa</a>
                             {% endfor %}
                         </div>
                     </div>
