--- a/App/Views/ThanhVien/cap_quyen.html
+++ b/App/Views/ThanhVien/cap_quyen.html
@@ -34,22 +34,12 @@ Cấp quyền quản trị
                                 <div class="col-md-9 col-sm-9 col-xs-12">
                                     <div class="">
                                         <label>
-                                            <input type="checkbox" class="js-switch" checked/> Viết bài
-                                        </label>
-                                    </div>
-                                    <div class="">
-                                        <label>
-                                            <input type="checkbox" class="js-switch"/> Cập nhật hồ sơ
-                                        </label>
-                                    </div>
-                                    <div class="">
-                                        <label>
-                                            <input type="checkbox" class="js-switch"/> Thêm hồ sơ
+                                            <input type="checkbox" class="js-switch" checked/> Quản trị viên
                                         </label>
                                     </div>
                                 </div>
                                 <div class="form-group">
-                                    <label class="control-label col-md-3 col-sm-3 col-xs-12">Mã hồ sơ quản lý</label>
+                                    <label class="control-label col-md-3 col-sm-3 col-xs-12">Được quyền quản lý chi</label>
                                     <div class="col-md-9 col-sm-9 col-xs-12">
                                         <select class="form-control" name="mahoso">
                                             {% for hoSo in dsHoSo %}
