--- a/App/Views/ThanhVien/danh_sach.html
+++ b/App/Views/ThanhVien/danh_sach.html
@@ -38,9 +38,9 @@ Danh sách thành viên
                                 <td>{{user.name}}</td>
                                 <td>{{user.email}}</td>
                                 <td>{{user.is_active}}</td>
-                                <td>2011/04/25</td>
+                                <td>02/01/2018</td>
                                 <td>{{user.MaHoSo}}</td>
-                                <td><a href="/admin/thanhvien/{{user.id}}/chinhsua" class="btn btn-warning btn-sm">Cập nhật thông tin</a></td>
+                                <td><a href="/admin/thanh-vien/{{user.id}}/chinh-sua" class="btn btn-warning btn-sm">Cập nhật thông tin</a></td>
                             </tr>
                             {% endfor %}
                             </tbody>
