--- a/App/Views/TimKiem/result_search.html
+++ b/App/Views/TimKiem/result_search.html
@@ -8,7 +8,7 @@ Kết quả tìm kiếm
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>Danh sách hồ sơ</h3>
+                <h3>Danh sách kết quả tìm kiếm</h3>
             </div>
 
             <div class="title_right">
