--- a/App/Views/User/BaiViet/chi_tiet_bai_viet.html
+++ b/App/Views/User/BaiViet/chi_tiet_bai_viet.html
@@ -19,10 +19,10 @@ Trang chủ
             </div>
         </div>
         <div class="col-9">
-            <h5>{{baiViet.TieuDe}}</h5>
+            <h3>{{baiViet.TieuDe}}</h3>
             <small><i>Nguyễn Hữu Tý</i> - Thứ hai, 20/11/2017</small>
             <div class="thumb">
-                <img src="/images/anh1.jpg" alt="">
+                <img src="/images/AnhBaiViet/{{baiViet.HinhAnh}}" alt="">
             </div>
             <div>
                 {{baiViet.NoiDung | raw }}
