--- a/App/Views/base.html
+++ b/App/Views/base.html
@@ -71,29 +71,43 @@
                         <ul class="nav side-menu">
                             <li><a><i class="fa fa-home"></i> Trang chủ <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="/user/home/index"><i class="fa fa-newspaper-o" aria-hidden="true"></i>Tin tức</a></li>
+                                    <li><a href="/"><i class="fa fa-newspaper-o" aria-hidden="true"></i>Tin
+                                        tức</a></li>
                                 </ul>
                             </li>
                             <li><a><i class="fa fa-sitemap" aria-hidden="true"></i></i>
                                 Phả đồ <span class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="/giapha/giaPhaDangDung"><i class="fa fa-list-ol" aria-hidden="true"></i>Dạng đứng</a></li>
-                                    <li><a href="/giapha/index"><i class="fa fa-sitemap" aria-hidden="true"></i>Dạng cây</a></li>
-                                    <li><a href="/tra-cuu-xung-ho"><i class="fa fa-handshake-o" aria-hidden="true"></i>Tra cứu cách xưng hô</a></li>
+                                    <li><a href="/admin/pha-do/pha-do-dang-dung"><i class="fa fa-list-ol"
+                                                                            aria-hidden="true"></i>Dạng đứng</a></li>
+                                    <li><a href="/admin/pha-do/index"><i class="fa fa-sitemap" aria-hidden="true"></i>Dạng cây</a>
+                                    </li>
+                                    <li><a href="/admin/tra-cuu-cach-xung-ho"><i class="fa fa-handshake-o" aria-hidden="true"></i>Tra
+                                        cứu cách xưng hô</a></li>
                                 </ul>
                             </li>
-                            <li><a><i class="fa fa-users" aria-hidden="true"></i></i> Thành viên <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-users" aria-hidden="true"></i></i> Thành viên <span
+                                    class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="/admin/thanhvien/index"><i class="fa fa-list-alt" aria-hidden="true"></i>Danh sách thành viên</a></li>
-                                    <li><a href="/admin/thanhvien/capquyen"><i class="fa fa-code-fork" aria-hidden="true"></i>Cấp quyền quản trị</a></li>
+                                    <li><a href="/admin/thanh-vien/danh-sach"><i class="fa fa-list-alt"
+                                                                            aria-hidden="true"></i>Danh sách thành viên</a>
+                                    </li>
+                                    <li><a href="/admin/thanh-vien/cap-quyen"><i class="fa fa-code-fork"
+                                                                               aria-hidden="true"></i>Cấp quyền quản trị</a>
+                                    </li>
                                 </ul>
                             </li>
-                            <li><a><i class="fa fa-cloud-upload"></i> Quản lý bài viết <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-cloud-upload"></i> Quản lý bài viết <span
+                                    class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="/admin/baiviet/getThemBaiViet"><i class="fa fa-pencil-square-o"></i> Viết bài</a></li>
-                                    <li><a href="/admin/baiviet/getDanhSachBaiViet"><i class="fa fa-bars"></i>Danh sách bài viết</a></li>
-                                    <li><a href="/admin/loaitin/index"><i class="fa fa-archive" aria-hidden="true"></i>Cập nhật danh mục</a></li>
-                                    <li><a href="/xem-lich"><i class="fa fa-calendar" aria-hidden="true"></i>Xem lịch</a></li>
+                                    <li><a href="/admin/bai-viet/them-bai-viet"><i class="fa fa-pencil-square-o"></i>
+                                        Viết bài</a></li>
+                                    <li><a href="/admin/bai-viet/danh-sach"><i class="fa fa-bars"></i>Danh sách
+                                        bài viết</a></li>
+                                    <li><a href="/admin/loai-tin"><i class="fa fa-archive" aria-hidden="true"></i>Cập
+                                        nhật danh mục</a></li>
+                                    <li><a href="/admin/lich-viec-toc"><i class="fa fa-calendar" aria-hidden="true"></i>Xem
+                                        lịch</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -101,34 +115,28 @@
                     <div class="menu_section">
                         <h3>Hồ sơ</h3>
                         <ul class="nav side-menu">
-                            <li><a><i class="fa fa-id-card-o" aria-hidden="true"></i> Quản lý hồ sơ <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-id-card-o" aria-hidden="true"></i> Quản lý hồ sơ <span
+                                    class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="/themhoso/index">Thêm hồ sơ</a></li>
-                                    <li><a href="/admin/hoso/index">Danh sách hồ sơ</a></li>
+                                    <li><a href="/admin/ho-so/them-ho-so">Thêm hồ sơ</a></li>
+                                    <li><a href="/admin/ho-so/danh-sach">Danh sách hồ sơ</a></li>
                                 </ul>
                             </li>
-                            <li><a><i class="fa fa-bell" aria-hidden="true"></i> Admin <span class="fa fa-chevron-down"></span></a>
+                            <li><a><i class="fa fa-bell" aria-hidden="true"></i> Admin <span
+                                    class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-                                    <li><a href="page_403.html"><i class="fa fa-telegram" aria-hidden="true"></i> Gửi email tới các thành viên</a></li>
-                                    <li><a href="/admin/saoluudulieu/index"><i class="fa fa-file-excel-o" aria-hidden="true"></i> Xuất tệp tin Excel</a></li>
+                                    <li><a href="page_403.html"><i class="fa fa-telegram" aria-hidden="true"></i> Gửi
+                                        email tới các thành viên</a></li>
+                                    <li><a href="/admin/sao-luu/in-file-excel"><i class="fa fa-file-excel-o"
+                                                                               aria-hidden="true"></i> Xuất tệp tin
+                                        Excel</a></li>
                                 </ul>
                             </li>
                             <li><a><i class="fa fa-sitemap"></i> Xem theo đời <span
                                     class="fa fa-chevron-down"></span></a>
                                 <ul class="nav child_menu">
-
-                                    <!--<li><a>Level One<span class="fa fa-chevron-down"></span></a>-->
-                                        <!--<ul class="nav child_menu">-->
-                                            <!--<li class="sub_menu"><a href="level2.html">Level Two</a>-->
-                                            <!--</li>-->
-                                            <!--<li><a href="#level2_1">Level Two</a>-->
-                                            <!--</li>-->
-                                            <!--<li><a href="#level2_2">Level Two</a>-->
-                                            <!--</li>-->
-                                        <!--</ul>-->
-                                    <!--</li>-->
-                                    <li><a href="/giapha/phadochi/7">Chi 7</a>
-                                    <li><a href="/giapha/phadochi/8">Chi 8</a>
+                                    <li><a href="/admin/pha-do/7">Chi 7</a>
+                                    <li><a href="/admin/pha-do/8">Chi 8</a>
                                     </li>
                                 </ul>
                             </li>
@@ -181,12 +189,12 @@
                             <ul class="dropdown-menu dropdown-usermenu pull-right">
                                 <li><a href="javascript:;"> Trang cá nhân</a></li>
                                 <li>
-                                    <a href="javascript:;">
+                                    <a href="/admin/cai-dat">
                                         <span class="badge bg-red pull-right">50%</span>
-                                        <span>Settings</span>
+                                        <span>Thiết lập</span>
                                     </a>
                                 </li>
-                                <li><a href="/admin/users/chinhSua">Chỉnh sửa tài khoản</a></li>
+                                <li><a href="/admin/thong-tin-tai-khoan">Chỉnh sửa tài khoản</a></li>
                                 <li><a href="/logout"><i class="fa fa-sign-out pull-right"></i> Đăng xuất</a></li>
                                 <li><a href="/login#signup"><i class="fa fa-sign-out pull-right"></i> Đăng ký</a></li>
                             </ul>
@@ -201,7 +209,7 @@
                             <ul id="menu1" class="dropdown-menu list-unstyled msg_list" role="menu">
                                 <li>
                                     <a>
-                                        <span class="image"><img src="/images/img.jpg" alt="Profile Image"/></span>
+                                        <span class="image"><img src="/images/PA1057_gia-pha.png" alt="Profile Image"/></span>
                                         <span>
                           <span>John Smith</span>
                           <span class="time">3 mins ago</span>
@@ -211,46 +219,11 @@
                         </span>
                                     </a>
                                 </li>
-                                <li>
-                                    <a>
-                                        <span class="image"><img src="/images/img.jpg" alt="Profile Image"/></span>
-                                        <span>
-                          <span>John Smith</span>
-                          <span class="time">3 mins ago</span>
-                        </span>
-                                        <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a>
-                                        <span class="image"><img src="/images/img.jpg" alt="Profile Image"/></span>
-                                        <span>
-                          <span>John Smith</span>
-                          <span class="time">3 mins ago</span>
-                        </span>
-                                        <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a>
-                                        <span class="image"><img src="/images/img.jpg" alt="Profile Image"/></span>
-                                        <span>
-                          <span>John Smith</span>
-                          <span class="time">3 mins ago</span>
-                        </span>
-                                        <span class="message">
-                          Film festivals used to be do-or-die moments for movie makers. They were where...
-                        </span>
-                                    </a>
-                                </li>
+
                                 <li>
                                     <div class="text-center">
                                         <a>
-                                            <strong>See All Alerts</strong>
+                                            <strong>Xem tất cả thông báo</strong>
                                             <i class="fa fa-angle-right"></i>
                                         </a>
                                     </div>
