--- a/App/Views/BaiViet/chinh_sua_bai_viet.html
+++ b/App/Views/BaiViet/chinh_sua_bai_viet.html
@@ -28,7 +28,7 @@ Chỉnh sửa bài viết
         <div class="row">
             <div class="col-md-12">
                 <div class="x_panel">
-                    <form action="/admin/baiviet/postThemBaiViet" method="post" class="form-horizontal form-label-left" enctype="multipart/form-data">
+                    <form action="#" method="post" class="form-horizontal form-label-left" enctype="multipart/form-data">
 
                         <div class="form-group">
                             <label class="control-label col-md-3 col-sm-3 col-xs-12">Chọn loại tin
@@ -73,9 +73,7 @@ Chỉnh sửa bài viết
                         <div class="ln_solid"></div>
                         <div class="form-group">
                             <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-                                <button class="btn btn-primary" type="button">Hủy</button>
-                                <button class="btn btn-primary" type="reset">Reset</button>
-                                <button type="submit" class="btn btn-success">Thêm</button>
+                                <button type="submit" class="btn btn-success">Cập nhật bài viết</button>
                             </div>
                         </div>
 
