--- a/App/Views/Login/new.html
+++ b/App/Views/Login/new.html
@@ -12,11 +12,11 @@
                 <h1>Đăng nhập</h1>
 
                 <div>
-                    <input type="text" class="form-control" placeholder="Email" required="" id="inputEmail"
+                    <input type="text" class="form-control" placeholder="Email" required=""
                            name="email"/>
                 </div>
                 <div>
-                    <input type="password" class="form-control" placeholder="Mật khẩu" required="" id="inputPassword"
+                    <input type="password" class="form-control" placeholder="Mật khẩu" required=""
                            name="password"/>
                 </div>
                 <div class="pull-left">
@@ -28,7 +28,7 @@
                 <div class="pull-right">
                     <input type="submit" value="Đăng nhập" class="btn btn-default submit">
                 </div>
-                <a class="reset_pass pull-right" href="#">Quên mật khẩu?</a>
+                <a class="reset_pass pull-right" href="/password/forgot">Quên mật khẩu?</a>
                 {{ output | raw }}
                 <div class="clearfix"></div>
                 <div class="separator">
@@ -50,7 +50,7 @@
 
     <div id="register" class="animate form registration_form">
         <section class="login_content">
-            <form action="/signup/create" method="post" enctype="multipart/form-data">
+            <form action="/signup/create" method="post" id="formProfile" enctype="multipart/form-data">
                 <h1>Đăng ký thành viên</h1>
                 <div>
                     <input type="text" id="inputName" name="name" class="form-control" placeholder="Họ và tên"
@@ -92,4 +92,59 @@
         </section>
     </div>
 </div>
+{% endblock %}
+{% block footer %}
+
+<script src="/js/jquery.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.js"></script>
+<script src="/js/hideShowPassword.min.js"></script>
+<script src="/js/app.js"></script>
+
+<script>
+    $(document).ready(function() {
+        var user_id = '{{user.id}}';
+        /**
+         * Validate the form
+         */
+        $('#formProfile').validate({
+            rules: {
+                name: 'required',
+                email: {
+                    required: true,
+                    email: true,
+//                    remote: '/account/validate-email',
+                    remote: {
+                        url: '/account/validate-email',
+                        data: {
+                            ignore_id: function () {
+                                return user_id;
+                            }
+                        }
+                    }
+
+                },
+                password: {
+                    required: false,
+                    minlength: 6,
+                    validPassword: true
+                }
+            },
+            messages: {
+                email: {
+                    remote: 'Email này đã được đăng ký'
+                }
+            }
+        });
+
+
+        /**
+         * Show password toggle button
+         */
+        $('#inputPassword').hideShowPassword({
+            show: false,
+            innerToggle: 'focus'
+        });
+    });
+</script>
+
 {% endblock %}
