--- a/App/Views/ThanhVien/chinh_sua_thanh_vien.html
+++ b/App/Views/ThanhVien/chinh_sua_thanh_vien.html
@@ -8,7 +8,7 @@ Thông tin tài khoản
     <div class="">
         <div class="page-title">
             <div class="title_left">
-                <h3>Thông tin tài khoản</h3>
+                <h3>Thành viên</h3>
             </div>
         </div>
         <div class="clearfix"></div>
@@ -22,7 +22,7 @@ Thông tin tài khoản
                     </div>
                     <div class="x_content">
                         <br>
-                        <form action="/admin/thanhvien/updateProfile" method="post" class="form-horizontal form-label-left" enctype="multipart/form-data">
+                        <form action="/admin/thanh-vien/updateProfile" method="post" class="form-horizontal form-label-left" enctype="multipart/form-data">
 
                             <div class="form-group">
                                 <label class="control-label col-md-3 col-sm-3 col-xs-12" for="name">ID
@@ -104,7 +104,6 @@ Thông tin tài khoản
                             <div class="form-group">
                                 <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
                                     <button class="btn btn-primary" type="button">Hủy bỏ</button>
-                                    <button class="btn btn-primary" type="reset">Đặt lại</button>
                                     <button type="submit" class="btn btn-success">Cập nhật</button>
                                 </div>
                             </div>
